# OsmAnd-jni

./: .classpath  .gitignore  .project  Android.mk  CMakeLists.txt  README.md  build.xml  collect_libs.sh  generate.sh  jni.cmake  osmand.i
bridge/net/osmand/binary/: BinaryInspectorNative.java
java/net/osmand/: NativeLibrary.java
java/net/osmand/binary/: BinaryInspector.java  BinaryInspectorNative.java  BinaryMapAddressReaderAdapter.java  BinaryMapIndexReader.java
java/net/osmand/bridge/: CoreOsmAndJNI.java  ObfReader.java  ObfSection.java  SWIGTYPE_p_QString.java  SWIGTYPE_p_std__listT_OsmAnd__ObfSection_p_t.java  SWIGTYPE_p_uint32_t.java
java/net/osmand/data/: Building.java  City.java  LatLon.java  Street.java  TransportRoute.java  TransportStop.java
java/net/osmand/osm/: EntityParser.java  MapRenderingTypes.java  MapRenderingTypesEncoder.java  OsmTransportRoute.java  rendering_types.xml
java/net/osmand/osm/edit/: EntityParser.java  Way.java
java/net/osmand/plus/: OsmandSettings.java
java/net/osmand/plus/routing/: AlarmInfo.java  RouteCalculationResult.java  RouteProvider.java  RoutingHelper.java
java/net/osmand/render/: default.render.xml
java/net/osmand/router/: NewGeneralRouter.java  RoutingConfiguration.java  routing.xml
java/net/osmand/util/: MapAlgorithms.java  MapUtils.java
native/: java_core_wrap.cpp
